<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".mvp.recordatorios.MainActivity">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/edTxtTexto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:maxLines="30"
        android:hint="@string/me_siento"
        android:layout_marginTop="25dp"
        android:layout_below="@id/txtTitle"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/edTxtTexto"/>

    <Button
        android:id="@+id/btnSeeMemories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ver_memorias"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btnSave"/>

</RelativeLayout>